--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,62 @@
     margin: 0;
 }
 body {
-    background-color: peachpuff;
+    width: 100%;
+}
+.nab-bar {
+    display: flex;
+    justify-content: space-around;
+    background-color: rgb(70, 70, 223);
+}
+.nab-bar-list {
+    display: flex;
+    justify-content: space-between;
+}
+.item {
+    margin: 10px 10px;
+    list-style: none;
+    color: white;
+}
+.input-wrapper {
+    display: flex;
+    align-items: center;
+}
+.search-bar {
+    margin: 10px 10px;
+    width: 400px;
+    height: 30px;
+    border: none;
+    border-radius: 15px;
+    padding-left: 10px;
+}
+.magnifying-glass-icon img {
+    width: 20px;
+    height: 20px;
 }
 h1 {
     font-size: large;
 }
-img {
-    width: 40px;
-    height: 40px;
+.image-container img {
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+}
+.footer {
+    display: flex;
+    justify-content: space-around;
+    background-color: rgb(70, 70, 223);
+    align-items: center;
+}
+.footer-text {
+text-align: center;
+color: white;
+}
+.social-networks {
+    margin: 10px;
+    color: white;
+}
+.social-logo {
+    width: 20px;
+    height: 20px;
+    margin-top: 5px;
 }
