--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,14 @@ body {
 .nab-bar-list {
     display: flex;
     justify-content: space-between;
-}
-.item {
-    margin: 10px 10px;
     list-style: none;
+    align-items: center;
+    cursor: pointer;
+}
+.item a{
+    margin: 10px 10px;
     color: white;
+    text-decoration: none;
 }
 .input-wrapper {
     display: flex;
@@ -42,6 +45,36 @@ h1 {
 .image-container img {
     width: 100%;
     height: 600px;
+    object-fit: cover;
+}
+.images-container--slider {
+    display: flex;
+    height: 300px;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+    justify-content: center;
+}
+.pictures-container--card {
+    position: relative;
+    scroll-snap-align: center;
+    /* width: 70%; */
+    min-width: 190px;
+    max-width: 300px;
+    height: 250px;
+    margin: 30px 5px 0;
+    /* padding: 0 15px; */
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgb(89 73 30 / 16%);
+    
+}
+.images-card {
+    width: 100%;
+    min-width: 190px;
+    max-width: 310px;
+    height: 250px;
+    border-radius: 15px;
     object-fit: cover;
 }
 .footer {
