--- a/styles.css
+++ b/styles.css
@@ -13,16 +13,16 @@ body {
     background-color: rgb(70, 70, 223);
 }
 .nab-bar-list {
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    align-items: center;
-    cursor: pointer;
+    display: none;
 }
+
 .item a{
     margin: 10px 10px;
     color: white;
     text-decoration: none;
+}
+.hamburguer-menu-icon {
+    padding: 20px;
 }
 .input-wrapper {
     display: flex;
@@ -68,7 +68,6 @@ h1 {
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgb(89 73 30 / 16%);
-    
 }
 .images-card {
     width: 100%;
@@ -116,4 +115,23 @@ color: white;
     width: 20px;
     height: 20px;
     margin-top: 5px;
+}
+
+@media (min-width: 760px){ 
+    .nab-bar {
+        display: flex;
+        justify-content: space-around;
+        background-color: rgb(70, 70, 223);
+    }
+    .nab-bar-list {
+        display: flex;
+        justify-content: space-between;
+        list-style: none;
+        align-items: center;
+        cursor: pointer;
+    }
+    .hamburguer-menu-icon {
+        display: none;
+    }
+
 }
